# Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Food.h  Line.h  RandomNumberGenerator.h  Rect.h  Shader.h  Snake.h  Text.h
shader/: line_shader.fs  rect_shader.fs  rect_shader.vs  snake_shader.fs  snake_shader.vs
src/: Food.cpp  Line.cpp  RandomNumberGenerator.cpp  Rect.cpp  Snake.cpp  Text.cpp  main.cpp
tests/food_placement/: food_placement.cpp
